; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/lua/extr_testlib.c_db_query.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/lua/extr_testlib.c_db_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"RarchDB.Cursor\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @db_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @db_query(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32* @checkdb(i32* %9)
  store i32* %10, i32** %3, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call i8* @luaL_checkstring(i32* %11, i32 -1)
  store i8* %12, i8** %4, align 8
  store i8* null, i8** %5, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @strlen(i8* %15)
  %17 = call i32* @libretrodb_query_compile(i32* %13, i8* %14, i32 %16, i8** %5)
  store i32* %17, i32** %6, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %26

20:                                               ; preds = %1
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @lua_pushnil(i32* %21)
  %23 = load i32*, i32** %2, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @lua_pushstring(i32* %23, i8* %24)
  br label %54

26:                                               ; preds = %1
  %27 = load i32*, i32** %2, align 8
  %28 = call i32* @lua_newuserdata(i32* %27, i32 4)
  store i32* %28, i32** %8, align 8
  %29 = load i32*, i32** %3, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @libretrodb_cursor_open(i32* %29, i32* %30, i32* %31)
  store i32 %32, i32* %7, align 4
  %33 = icmp eq i32 %32, 0
  br i1 %33, label %34, label %41

34:                                               ; preds = %26
  %35 = load i32*, i32** %2, align 8
  %36 = call i32 @luaL_getmetatable(i32* %35, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %37 = load i32*, i32** %2, align 8
  %38 = call i32 @lua_setmetatable(i32* %37, i32 -2)
  %39 = load i32*, i32** %2, align 8
  %40 = call i32 @lua_pushnil(i32* %39)
  br label %51

41:                                               ; preds = %26
  %42 = load i32*, i32** %2, align 8
  %43 = call i32 @lua_pop(i32* %42, i32 1)
  %44 = load i32*, i32** %2, align 8
  %45 = call i32 @lua_pushnil(i32* %44)
  %46 = load i32*, i32** %2, align 8
  %47 = load i32, i32* %7, align 4
  %48 = sub nsw i32 0, %47
  %49 = call i8* @strerror(i32 %48)
  %50 = call i32 @lua_pushstring(i32* %46, i8* %49)
  br label %51

51:                                               ; preds = %41, %34
  %52 = load i32*, i32** %6, align 8
  %53 = call i32 @libretrodb_query_free(i32* %52)
  br label %54

54:                                               ; preds = %51, %20
  ret i32 2
}

declare dso_local i32* @checkdb(i32*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32* @libretrodb_query_compile(i32*, i8*, i32, i8**) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32* @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @libretrodb_cursor_open(i32*, i32*, i32*) #1

declare dso_local i32 @luaL_getmetatable(i32*, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @libretrodb_query_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
